Thu Dec 29 17:29:06 UTC 2011  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Mem_Map.cpp (ACE_Mem_Map::map_it): Fixed a missing '('.  Thanks to Johnny for reporting this.

Thu Dec 29 15:14:45 UTC 2011  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Mem_Map.cpp (ACE_Mem_Map::map_it): Further improved the
          error checking.  Thanks to JaeSung Lee <berise at gmail dot
          com> for suggesting this.

Tue Dec 27 15:19:56 UTC 2011  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Mem_Map.cpp (ACE_Mem_Map::map_it): mmap through character
          device doesn't care about it's size, so map with /dev/* is done
          with a special case.  Thanks to JaeSung Lee <berise at gmail dot
          com> for reporting this and providing a fix.

Tue Dec 27 11:39:53 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
        * bin/diff-builds-and-group-fixed-tests-only.sh:
        * docs/Download.html:
        * docs/bczar/bczar.html:
        * etc/index.html:
          Updated for next release

Tue Dec 27 10:06:28 CET 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE version 6.0.7 released.

Wed Dec 21 11:25:49 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * tests/Task_Wait_Test.cpp:
          Fixed compile issue on Solaris 10.

Wed Dec 21 09:41:54 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        * examples/Timer_Queue/Reactor_Timer_Queue_Test.cpp:

          Added timer queue reset on global reactor instance.

Tue Dec 20 15:43:39 UTC 2011  Steve Huston  <shuston@riverace.com>

        * tests/Task_Wait_Test.cpp:
        * tests/tests.mpc:
        * tests/run_test.lst:
          New test program that tests the ACE_Thread_Manager::wait() from a
          called-back ACE_Task::close() on thread exit.

Tue Dec 20 15:36:24 UTC 2011  Steve Huston  <shuston@riverace.com>

        * ace/Thread.inl (disablecancel): Correct size pased to memset.