@@ -1,3 +1,10 @@
+Fri Dec 30 10:13:59 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/config-linux.h:
+          Added support for ulibc, thanks to Chong Wuk Pak
+          <chong dot pak at lmco dot com> for providing the patch. This fixes
+          bugzilla 3999
+
 Thu Dec 29 17:29:06 UTC 2011  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>
 
         * ace/Mem_Map.cpp (ACE_Mem_Map::map_it): Fixed a missing '('.  Thanks to Johnny for reporting this.
